--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,9 @@ body {
   letter-spacing: 0.03em;
 }
 .container {
-  width: 1230px;
+  width: 1200px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
 }
 
 h1, h2, h3, h4, p, ul {
