--- a/css/style.css
+++ b/css/style.css
@@ -141,10 +141,8 @@ h1, h2, h3, h4, p, ul {
   height: 50px;
   justify-content: center;
   margin-top: 30px;
-  margin-bottom: 200px;
-  margin-left: auto;
-  margin-right: auto;
-
+  
+  border: none;
   border-radius: 4px;
   background-color: var(--hover-color);
   color: var(--accent-color);
@@ -154,7 +152,6 @@ h1, h2, h3, h4, p, ul {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
@@ -167,6 +164,7 @@ h1, h2, h3, h4, p, ul {
   cursor: pointer;
   background-color: var(--secondary-bg-color);
   border-radius: 4px;
+  border: none;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -184,6 +182,10 @@ h1, h2, h3, h4, p, ul {
 /* primery page */
 .head.section {
   background-color: var(--head-bg-color);
+  text-align: center;
+
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .head-title {
@@ -233,6 +235,9 @@ h1, h2, h3, h4, p, ul {
 }
 
 /* flex primary */
+.solutions {
+  padding-top: 0;
+}
 .features.list {
   display: flex;
 }
