--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,9 @@ h1, h2, h3, h4, p, ul {
   margin-top: 20px;
   padding-bottom: 60px;
 }
+.footer-contact li:not(:last-child) {
+  margin-bottom: 9px;
+}
 .logo-footer {
   padding-top: 60px;
 }
