--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ h1, h2, h3, h4, p, ul {
 /* header & footer */
 .footer {
   background-color: var(--footer-bg-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer-address {
   font-style: normal;
@@ -91,6 +93,7 @@ h1, h2, h3, h4, p, ul {
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  padding: 32px 0;
 }
 .contact .contacts {
   line-height: 1.2;
@@ -102,6 +105,7 @@ h1, h2, h3, h4, p, ul {
   line-height: 1.7;
   color: var(--title-text-color);
   text-decoration: none;
+  padding: 32px 0;
 }
 .nav:hover, 
 .nav:focus,
@@ -133,14 +137,11 @@ h1, h2, h3, h4, p, ul {
 }
 .footer-contact {
   margin-top: 20px;
-  padding-bottom: 60px;
 }
 .footer-contact li:not(:last-child) {
   margin-bottom: 9px;
 }
-.logo-footer {
-  padding-top: 60px;
-}
+
 
 /* button */
 .button {
@@ -178,6 +179,8 @@ h1, h2, h3, h4, p, ul {
   line-height: 1.6;
   text-align: center;
   color: var(--primary-text-color);
+
+  padding: 6px 22px;
 }
 .button-portfolio:hover, 
 .button-portfolio:focus {
@@ -320,7 +323,7 @@ h1, h2, h3, h4, p, ul {
 .cards-projects .item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
-.card-projects img {
+img {
   display: block;
 }
 .text-projects {
