--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,8 @@ h1, h2, h3, h4, p, ul {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 .text-projects {
   border-left: 1px solid #EEEEEE;
