--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ h1, h2, h3, h4, p, ul {
   line-height: 1.9;
   text-align: center;
   color: var(--primary-text-color);
+  margin-bottom: 10px;
 }
 .speciality {
   font-size: 16px;
@@ -292,6 +293,8 @@ h1, h2, h3, h4, p, ul {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-text-color);
+  
+  margin-bottom: 4px;
 }
 .description-projects {
   font-size: 16px;
